--- a/imgui.ini
+++ b/imgui.ini
@@ -8,6 +8,11 @@ Pos=1364,147
 Size=550,680
 Collapsed=0
 
+[Window][Choose File##ChooseFileDlgKey]
+Pos=66,67
+Size=1154,711
+Collapsed=0
+
 [Table][0x51D6F5EA,3]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
@@ -77,6 +82,18 @@ RefScale=13
 Column 0  Width=86
 Column 1  Width=86
 Column 2  Width=86
+
+[Table][0xA7A2A596,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xC3FEEE67,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x915896DC,4]
+RefScale=13
+Column 0  Sort=0v
 
 [Docking][Data]
 
