--- a/imgui.ini
+++ b/imgui.ini
@@ -18,6 +18,12 @@ Pos=57,68
 Size=1613,831
 Collapsed=0
 
+[Window][Assets]
+Pos=503,319
+Size=1280,720
+Collapsed=0
+DockId=0x00000001,0
+
 [Table][0x51D6F5EA,3]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
@@ -101,4 +107,5 @@ RefScale=13
 Column 0  Sort=0v
 
 [Docking][Data]
+DockNode  ID=0x00000001 Pos=1462,859 Size=1280,720
 
