content Asset created bien fancy

--- a/imgui.ini
+++ b/imgui.ini
@@ -19,8 +19,18 @@ Size=1613,831
 Collapsed=0
 
 [Window][Assets]
-Pos=1102,751
+Pos=1097,752
 Size=800,306
+Collapsed=0
+
+[Window][Content Browser]
+Pos=1065,739
+Size=1400,661
+Collapsed=0
+
+[Window][Delete Asset?]
+Pos=1399,576
+Size=406,156
 Collapsed=0
 
 [Table][0x51D6F5EA,3]
@@ -104,6 +114,13 @@ Column 0  Sort=0v
 [Table][0x915896DC,4]
 RefScale=13
 Column 0  Sort=0v
+
+[Table][0x3FB5CA55,4]
+RefScale=17
+Column 0  Width=52 Sort=0^
+Column 1  Weight=1.0000
+Column 2  Width=100
+Column 3  Width=80
 
 [Docking][Data]
 
