--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "chCore/externals/assimp"]
-	path = chCore/externals/assimp
-	url = https://github.com/assimp/assimp.git
 [submodule "chCore/externals/SDL3"]
 	path = chCore/externals/SDL3
 	url = https://github.com/libsdl-org/SDL.git
@@ -10,3 +7,6 @@
 [submodule "chEditor/externals/nativefiledialog-extended"]
 	path = chEditor/externals/nativefiledialog-extended
 	url = https://github.com/btzy/nativefiledialog-extended.git
+[submodule "Importers/chMeshImporter/externals/assimp"]
+	path = Importers/chMeshImporter/externals/assimp
+	url = https://github.com/assimp/assimp.git
