--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,6 +64,7 @@ endif()
 if(EXISTS "${CMAKE_SOURCE_DIR}/chEditor")
   set(CH_EDITOR_ENABLED ON CACHE BOOL "Enable chEditor" FORCE)
   set(CH_SDL3_ENABLED ON CACHE BOOL "Enable SDL3 support" FORCE)
+  set(CH_IMPORTERS_ENABLED ON CACHE BOOL "Enable importers" FORCE)
 endif()
 
 add_subdirectory(chUtilities)
@@ -85,5 +86,6 @@ endif()
 
 if(EXISTS "${CMAKE_SOURCE_DIR}/chEditor")
   message("Directory exists.")
+  #add_subdirectory(Importers/chMeshImporter)
   add_subdirectory(chEditor)
 endif()
