context menu done and improter working

--- a/Importers/chMeshImporter/CMakeLists.txt
+++ b/Importers/chMeshImporter/CMakeLists.txt
@@ -13,20 +13,25 @@ set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
 set(CMAKE_INSTALL_RPATH "${CMAKE_BINARY_DIR}/lib")
 set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 
-
-add_library(chMeshImporter SHARED ${SOURCE_FILES})
-
 # Para Linux, agregar $ORIGIN para ruta relativa
 if(UNIX AND NOT APPLE)
     set(CMAKE_INSTALL_RPATH "$ORIGIN:${CMAKE_BINARY_DIR}/lib")
 endif()
 
 # Configuración de Assimp
-set(ASSIMP_BUILD_TESTS OFF CACHE BOOL "" FORCE)
-set(ASSIMP_BUILD_ASSIMP_TOOLS OFF CACHE BOOL "" FORCE)
-set(ASSIMP_BUILD_ZLIB ON CACHE BOOL "" FORCE)
-set(ASSIMP_NO_EXPORT ON CACHE BOOL "" FORCE)
+set(ASSIMP_BUILD_STATIC_LIB ON CACHE BOOL "Build assimp as static library" FORCE)
+set(ASSIMP_BUILD_SHARED_LIB OFF CACHE BOOL "Don't build assimp as shared library" FORCE)
+set(ASSIMP_BUILD_TESTS OFF CACHE BOOL "Disable assimp tests" FORCE)
+set(ASSIMP_BUILD_SAMPLES OFF CACHE BOOL "Disable assimp samples" FORCE)
+set(ASSIMP_BUILD_ASSIMP_TOOLS OFF CACHE BOOL "Disable assimp tools" FORCE)
+set(ASSIMP_INSTALL OFF CACHE BOOL "Disable assimp install" FORCE)
+set(ASSIMP_NO_EXPORT ON CACHE BOOL "Disable assimp export functionality" FORCE)
+set(BUILD_SHARED_LIBS_SAVED ${BUILD_SHARED_LIBS})
+set(BUILD_SHARED_LIBS OFF)
+message(STATUS "Assimp configured for static linking")
 add_subdirectory(externals/assimp)
+
+add_library(chMeshImporter SHARED ${SOURCE_FILES})
 
 # Configurar la salida de Assimp
 set_target_properties(assimp PROPERTIES
@@ -59,9 +64,12 @@ INCLUDESUBFOLDERS(${CMAKE_SOURCE_DIR}/chCore/src)
 target_include_directories(chMeshImporter PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/externals/assimp/include
     )
-target_link_libraries(chMeshImporter PUBLIC chUtilities chCore assimp)
+target_link_libraries(chMeshImporter PUBLIC chUtilities chCore assimp::assimp)
+
 target_compile_definitions(chMeshImporter PRIVATE
     CH_EDITOR_ENABLED=${CH_EDITOR_ENABLED}
     CH_SDL3_ENABLED=${CH_SDL3_ENABLED}
     CH_IMPORTERS_ENABLED=${CH_IMPORTERS_ENABLED}
+    ASSIMP_BUILD_STATIC_LIB
+    ASSIMP_BUILD_NO_EXPORT
 )
