Event system fixed

--- a/Importers/chMeshImporter/CMakeLists.txt
+++ b/Importers/chMeshImporter/CMakeLists.txt
@@ -5,7 +5,20 @@ file(GLOB SOURCE_FILES
 
 set(CMAKE_DEBUG_POSTFIX "d")
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
-set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -rdynamic")
+
+
+if(UNIX AND NOT APPLE)
+  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
+
+  # Editor specific flags
+  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -rdynamic -pie")
+
+  # Allow dynamic relocations for plugins
+  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -fPIC")
+else()
+  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -rdynamic")
+endif()
 
 # Configurar RPATH antes de agregar cualquier objetivo
 set(CMAKE_SKIP_BUILD_RPATH FALSE)
@@ -29,6 +42,22 @@ set(ASSIMP_NO_EXPORT ON CACHE BOOL "Disable assimp export functionality" FORCE)
 set(BUILD_SHARED_LIBS_SAVED ${BUILD_SHARED_LIBS})
 set(BUILD_SHARED_LIBS OFF)
 message(STATUS "Assimp configured for static linking")
+
+if(UNIX AND NOT APPLE)
+    # Try to find shared zlib first
+    find_package(ZLIB QUIET)
+    if(ZLIB_FOUND)
+        set(ASSIMP_SYSTEM_ZLIB ON CACHE BOOL "Use system zlib" FORCE)
+        message(STATUS "Using system zlib for Assimp to avoid PIC issues")
+    else()
+        # If no system zlib, ensure Assimp builds its own with PIC
+        set(ASSIMP_SYSTEM_ZLIB OFF CACHE BOOL "Build zlib with Assimp" FORCE)
+        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
+        message(STATUS "Building zlib with Assimp using -fPIC")
+    endif()
+endif()
+
 add_subdirectory(externals/assimp)
 
 add_library(chMeshImporter SHARED ${SOURCE_FILES})
@@ -38,6 +67,7 @@ set_target_properties(assimp PROPERTIES
     LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
     RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
     ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
+    POSITION_INDEPENDENT_CODE ON  # Add this line
 )
 set_target_properties(chMeshImporter PROPERTIES
     LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/Importers
@@ -72,4 +102,8 @@ target_compile_definitions(chMeshImporter PRIVATE
     CH_IMPORTERS_ENABLED=${CH_IMPORTERS_ENABLED}
     ASSIMP_BUILD_STATIC_LIB
     ASSIMP_BUILD_NO_EXPORT
+)
+
+target_compile_options(chMeshImporter PRIVATE
+  $<$<PLATFORM_ID:Linux>:-fPIC>
 )
