--- a/chCore/CMakeLists.txt
+++ b/chCore/CMakeLists.txt
@@ -57,7 +57,7 @@ macro(INCLUDESUBFOLDERS curdir)
 endmacro()
 
 INCLUDESUBFOLDERS(${CMAKE_CURRENT_SOURCE_DIR}/src)
-INCLUDESUBFOLDERS(${CMAKE_CURRENT_SOURCE_DIR}/../chUtilities/src)
+INCLUDESUBFOLDERS(${CMAKE_SOURCE_DIR}/chUtilities/src)
 
 target_include_directories(chCore PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/externals
