--- a/chEditor/CMakeLists.txt
+++ b/chEditor/CMakeLists.txt
@@ -4,6 +4,7 @@ file(GLOB
   ${CMAKE_CURRENT_SOURCE_DIR}/src/*/*.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/src/externals/*/*.h
   ${CMAKE_CURRENT_SOURCE_DIR}/src/externals/*/*.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/EditorAssets/*/*.h
 )
 
 # ImGui Source Files - Solo SDL3 backend
@@ -106,6 +107,8 @@ target_link_libraries(chEditor
 
 # C++20 compiler configuration
 target_compile_features(chEditor PRIVATE cxx_std_20)
+
+target_compile_definitions(chEditor PRIVATE CH_EDITOR_EXPORTS)
 
 # Success configuration message
 message(STATUS "chEditor configured with ImGui (SDL3 backend only)")
