Some small cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,6 @@ CMakeSettings.json
 #eclude dlls or shared libraries
 *.dll
 *.so
-
+chEditor/Content/fonts/fa-brands-400.ttf chEditor/Content/fonts/fa-regular-400.ttf chEditor/Content/fonts/fa-solid-900.ttf chEditor/Content/fonts/FiraCodeNerdFont-Regular.ttf
 #exclude .ini
 *.ini
