--- a/chEditor/CMakeLists.txt
+++ b/chEditor/CMakeLists.txt
@@ -92,7 +92,7 @@ target_compile_options(chEditor PRIVATE
 target_compile_definitions(chEditor PRIVATE
   CH_EDITOR_ENABLED
   CH_SDL3_ENABLED
-  CH_IMPORTERS_ENABLED
+  CH_CODECS_ENABLED
   IMGUI_DISABLE_OBSOLETE_FUNCTIONS
   IMGUI_DISABLE_OBSOLETE_KEYIO
 )
