Refactor: move Imgui to submodule chImgui. This is to avoid using different imgui instances for windows, this was working right for linux xp

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "chCodecs/chMeshCodec/externals/assimp"]
 	path = chCodecs/chMeshCodec/externals/assimp
 	url = https://github.com/assimp/assimp.git
+[submodule "chImgui/Externals/imgui"]
+	path = chImgui/Externals/imgui
+	url = https://github.com/ocornut/imgui.git
